[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streaming_vad"
version = "0.1.0"
description = "Voice Activity Detection (VAD) for streaming audio"
authors = [
    { name = "Shinya Fujie", email = "shinya.fujie@p.chibakoudai.jp" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "soundfile",
    "numpy",
    "torch",
    "torchaudio",
    "webrtcvad",
]
